--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "humanize-duration": "^3.17.0",
+    "mongoose": "^5.4.3",
     "telegraf": "^3.25.5",
     "telegraf-i18n": "^6.4.0"
   }
