--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyadminbot",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Бот для администрирования групп",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "dateformat": "^3.0.3",
     "dotenv": "^6.2.0",
     "eslint": "^5.12.0",
+    "html-entities": "^1.2.1",
     "humanize-duration": "^3.17.0",
     "mongoose": "^5.4.3",
     "telegraf": "^3.25.5",
