--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyadminbot",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "Бот для администрирования групп",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "dotenv": "^6.2.0",
     "eslint": "^5.12.0",
     "humanize-duration": "^3.17.0",
+    "languagedetect": "^1.2.0",
     "mongoose": "^5.4.3",
     "telegraf": "^3.25.5",
     "telegraf-i18n": "^6.4.0",
