--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon --config nodemon.json",
     "lint": "node_modules/.bin/eslint --ext js .",
     "lint:fix": "node_modules/.bin/eslint --fix --ext js ."
   },
@@ -23,7 +24,8 @@
   "devDependencies": {
     "@atomix/eslint-config": "^6.4.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.0"
+    "eslint": "^5.12.0",
+    "nodemon": "^1.19.0"
   },
   "repository": {
     "type": "git",
