--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MONGODB_URI="mongodb://localhost:27017/LyAdminBot"
 BOT_TOKEN="123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11"
+WEB_URL="https://admin.lyo.su/login"
