--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyadminbot",
-  "version": "1.6.25",
+  "version": "1.6.26",
   "description": "Бот для администрирования групп",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "humanize-duration": "^3.18.0",
     "languagedetect": "^1.2.0",
     "mongoose": "^5.5.12",
+    "sharp": "^0.23.0",
     "telegraf": "^3.30.0",
     "telegraf-i18n": "^6.5.0",
     "telegraf-ratelimit": "^2.0.0",
