--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=production
 MONGODB_URI="mongodb://localhost:27017/LyAdminBot"
 BOT_TOKEN="123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11"
+BOT_DOMAIN=""
 WEB_URL="https://admin.lyo.su/login"
