--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyadminbot",
-  "version": "1.9.5",
+  "version": "1.10.0",
   "description": "Бот для администрирования групп",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,14 @@
     "canvas": "^2.6.0",
     "dateformat": "^3.0.3",
     "dotenv": "^6.2.0",
+    "emoji-datasource-apple": "^4.1.0",
+    "emoji-regex": "^8.0.0",
+    "emoji-unicode": "^1.1.0",
     "got": "^9.6.0",
     "humanize-duration": "^3.18.0",
     "languagedetect": "^1.3.0",
     "mongoose": "^5.7.7",
+    "runes": "^0.4.3",
     "sharp": "^0.23.2",
     "telegraf": "^3.33.3",
     "telegraf-i18n": "^6.5.0",
