--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lyadminbot",
-  "version": "1.15.14",
+  "version": "1.15.15",
   "description": "Бот для администрирования групп",
   "main": "index.js",
   "scripts": {
@@ -12,11 +12,11 @@
     "canvas": "^2.6.0",
     "dateformat": "^3.0.3",
     "dotenv": "^6.2.0",
+    "emoji-db": "^1.7.0",
     "got": "^9.6.0",
     "humanize-duration": "^3.18.0",
     "languagedetect": "^1.3.0",
     "mongoose": "^5.7.7",
-    "runes": "^0.4.3",
     "sharp": "^0.23.2",
     "telegraf": "^3.33.3",
     "telegraf-i18n": "^6.5.0",
