--- a/.github/workflows/cron_hellobot.yml
+++ b/.github/workflows/cron_hellobot.yml
@@ -1,4 +1,4 @@
-name: HelloBot
+name: LyAdminBot
 
 on:
   schedule:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: HelloBot
+    - name: bot
       run: |
         npm ci
         npm start
