--- a/.github/workflows/hellobot.yml
+++ b/.github/workflows/hellobot.yml
@@ -1,4 +1,4 @@
-name: HelloBot
+name: LyAdminBot
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: HelloBot
+    - name: bot
       run: |
         npm ci
         npm start
