--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "url": "git+https://github.com/LyoSU/LyAdminBot.git"
   },
   "author": "LyoSU",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/LyoSU/LyAdminBot/issues"
   },
