--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "humanize-duration": "^3.18.0",
     "languagedetect": "^1.3.0",
     "mongoose": "^5.7.7",
+    "openai": "^4.100.0",
     "sharp": "^0.29.3",
     "telegraf": "^3.33.3",
     "telegraf-i18n": "^6.5.0",
