--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb://localhost:27017/LyAdminBot"
 BOT_TOKEN="123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11"
 BOT_DOMAIN=""
 WEB_URL="https://admin.lyo.su/login"
+OPENAI_API_KEY=your_openai_api_key_here
