--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "languagedetect": "^1.3.0",
     "mongoose": "^5.7.7",
     "openai": "^4.100.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "sharp": "^0.29.3",
     "telegraf": "^3.33.3",
     "telegraf-i18n": "^6.5.0",
